# mcp-flowguard

./: .gitignore  README.md  phase1-policy-engine.md  phase2a-taint-engine.md  pyproject.toml
policies/: default_policy.yaml  permissive_policy.yaml  strict_policy.yaml
scripts/: run_proxy.py
specs/: phase1-policy-engine.md  phase2b-mcp-proxy.md
src/flowguard/: __init__.py
src/flowguard/lattice/: __init__.py  labels.py  lattice.py  levels.py
src/flowguard/logging/: structured.py
src/flowguard/mock_tools/: database.py  email.py  filesystem.py  web_fetch.py
src/flowguard/monitor/: context.py  interceptor.py  labeler.py  propagation.py  proxy.py
src/flowguard/policy/: __init__.py  default_policy.yaml  dsl.py  engine.py  exceptions.py  loader.py  parsing.py  permissive_policy.yaml  strict_policy.yaml  types.py
tests/: conftest.py
tests/logging/: test_structured.py
tests/test_lattice/: test_labels.py  test_lattice.py  test_levels.py
tests/test_mock_tools/: test_mock_servers.py
tests/test_monitor/: test_context.py  test_interceptor.py  test_labeler.py  test_propagation.py  test_proxy.py  test_structured.py
tests/test_policy/: test_dsl.py  test_engine.py  test_loader.py
