[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-flowguard"
version = "0.1.0"
description = "Runtime information flow enforcement for MCP-based LLM pipelines"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/flowguard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
